--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -7,6 +7,8 @@
     <title>404</title>
 </head>
 <body>
-	<h1>Page is not found !!!</h1>  
+<h1>404</h1>
+<h2>Page not found</h2>
+<a href="/">Go Home</a>
 </body>
 </html>
