--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -14,7 +14,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__about__logo">
-                            <a href="index.html"><img src="../../../../../../../IMusic/img/logoIMusic.png" alt=""></a>
+                            <a href="index.html"><img src="img/logoIMusic.png" alt=""></a>
                         </div>
                         <ul>
                             <li>Address: 60-49 Road 11378 New York</li>
