--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html xml:th="http://www.thymeleaf.org">
+<head th:fragment="header">
     <meta charset="UTF-8">
     <meta name="description" content="Ogani Template">
+
     <meta name="keywords" content="Ogani, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -30,7 +31,7 @@
     <div class="humberger__menu__overlay"></div>
     <div class="humberger__menu__wrapper">
         <div class="humberger__menu__logo">
-            <a href="#"><img src="../../../../../../../IMusic/img/logo.png" alt=""></a>
+            <a href="#"><img src="img/logo.png" alt=""></a>
         </div>
         <div class="humberger__menu__cart">
             <ul>
@@ -41,7 +42,7 @@
         </div>
         <div class="humberger__menu__widget">
             <div class="header__top__right__language">
-                <img src="../../../../../../../IMusic/img/language.png" alt="">
+                <img src="img/language.png" alt="">
                 <div>English</div>
                 <span class="arrow_carrot-down"></span>
                 <ul>
@@ -127,7 +128,7 @@
             <div class="row">
                 <div class="col-lg-2">
                     <div class="header__logo">
-                        <a href="index.html"><img src="../../../../../../../IMusic/img/logoIMusic.png" alt=""></a>
+                        <a href="index.html"><img src="img/logoIMusic.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-7">
