--- a/src/main/resources/templates/shop-grid.html
+++ b/src/main/resources/templates/shop-grid.html
@@ -161,7 +161,7 @@
                                     <div class="latest-prdouct__slider__item">
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="../../../../../../../IMusic/img/guitar/cordoba-C1M-CE-01-450x471.jpg" alt="">
+                                                <img src="img/guitar/cordoba-C1M-CE-01-450x471.jpg" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Crab Pool Security</h6>
@@ -170,7 +170,7 @@
                                         </a>
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="../../../../../../../IMusic/img/guitar/Kapok-D-118AC-1-400x400-450x471.jpg" alt="">
+                                                <img src="img/guitar/Kapok-D-118AC-1-400x400-450x471.jpg" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Crab Pool Security</h6>
@@ -179,7 +179,7 @@
                                         </a>
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="../../../../../../../IMusic/img/organ/Casiotone-CT-S410-450x471.jpg" alt="">
+                                                <img src="img/organ/Casiotone-CT-S410-450x471.jpg" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Crab Pool Security</h6>
@@ -190,7 +190,7 @@
                                     <div class="latest-prdouct__slider__item">
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="../../../../../../../IMusic/img/organ/dan-organ-casiotone-lk-s250-450x471.jpg" alt="">
+                                                <img src="img/organ/dan-organ-casiotone-lk-s250-450x471.jpg" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Crab Pool Security</h6>
@@ -199,7 +199,7 @@
                                         </a>
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="../../../../../../../IMusic/img/Ken/Yamaha-Alto-Horn-YAH-803S.jpg" alt="">
+                                                <img src="img/Ken/Yamaha-Alto-Horn-YAH-803S.jpg" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Crab Pool Security</h6>
@@ -208,7 +208,7 @@
                                         </a>
                                         <a href="#" class="latest-product__item">
                                             <div class="latest-product__item__pic">
-                                                <img src="../../../../../../../IMusic/img/organ/dan_organ_casio_CT_S200_den_2-450x471.png" alt="">
+                                                <img src="img/organ/dan_organ_casio_CT_S200_den_2-450x471.png" alt="">
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Crab Pool Security</h6>
@@ -232,22 +232,18 @@
                         <div class="row">
                             <div class="product__discount__slider owl-carousel">
                                 <div class="col-lg-4">
-                                    <div class="product__discount__item">
-                                        <div class="product__discount__item__pic set-bg"
+                                    <a class="product__discount__item" href="shop-details.html">
+                                        <img class="product__discount__item__pic set-bg"
                                             data-setbg="img/guitar/cordoba-C1M-CE-01-450x471.jpg">
                                             <div class="product__discount__percent">-20%</div>
-                                            <ul class="product__item__pic__hover">
-                                                <!-- <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-retweet"></i></a></li> -->
-                                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                                            </ul>
-                                        </div>
+
+                                        </img>
                                         <div class="product__discount__item__text">
                                             <span>Dried Fruit</span>
                                             <h5><a href="shop-details.html">Raisin’n’nuts</a></h5>
                                             <div class="product__item__price">$30.00 <span>$36.00</span></div>
                                         </div>
-                                    </div>
+                                    </a>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="product__discount__item">
@@ -255,8 +251,7 @@
                                             data-setbg="img/guitar/Kapok-D-118AC-1-400x400-450x471.jpg">
                                             <div class="product__discount__percent">-20%</div>
                                             <ul class="product__item__pic__hover">
-                                                <!-- <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-retweet"></i></a></li> -->
+
                                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                             </ul>
                                         </div>
@@ -273,8 +268,7 @@
                                             data-setbg="img/organ/dan_organ_casio_CT_S200_den_2-450x471.png">
                                             <div class="product__discount__percent">-20%</div>
                                             <ul class="product__item__pic__hover">
-                                                <!-- <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-retweet"></i></a></li> -->
+
                                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                             </ul>
                                         </div>
@@ -291,8 +285,7 @@
                                             data-setbg="img/organ/Casiotone-CT-S410-450x471.jpg">
                                             <div class="product__discount__percent">-20%</div>
                                             <ul class="product__item__pic__hover">
-                                                <!-- <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-retweet"></i></a></li> -->
+
                                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                             </ul>
                                         </div>
@@ -309,8 +302,7 @@
                                             data-setbg="img/organ/dan-organ-casiotone-lk-s250-450x471.jpg">
                                             <div class="product__discount__percent">-20%</div>
                                             <ul class="product__item__pic__hover">
-                                                <!-- <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-retweet"></i></a></li> -->
+
                                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                             </ul>
                                         </div>
@@ -327,8 +319,7 @@
                                             data-setbg="img/piano/dan-piano-dien-roland-rp30-chinh-hang-450x471.jpg">
                                             <div class="product__discount__percent">-20%</div>
                                             <ul class="product__item__pic__hover">
-                                                <!-- <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-retweet"></i></a></li> -->
+
                                                 <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                             </ul>
                                         </div>
@@ -371,8 +362,7 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="img/guitar/cordoba-C1M-CE-01-450x471.jpg">
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+
                                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
@@ -386,8 +376,7 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="img/guitar/Kapok-D-118AC-1-400x400-450x471.jpg">
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+
                                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
@@ -401,8 +390,7 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="img/guitar/Suzuki-SDG-6NL-1-270x270-450x471.jpg">
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+
                                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
@@ -416,8 +404,7 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="img/piano/dan-piano-dien-roland-rp30-chinh-hang-450x471.jpg">
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+
                                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
@@ -431,8 +418,7 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="img/organ/Casiotone-CT-S410-450x471.jpg">
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+
                                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
@@ -446,8 +432,7 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="img/organ/dan-organ-casiotone-lk-s250-450x471.jpg">
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+
                                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
@@ -461,8 +446,7 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="img/organ/dan_organ_casio_CT_S200_den_2-450x471.png">
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+
                                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
@@ -476,8 +460,7 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="img/Ken/Full-Double-YHR-567.jpg">
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+
                                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
@@ -491,8 +474,7 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="img/Ken/Yamaha-Alto-Horn-YAH-803S.jpg">
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+
                                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
@@ -506,8 +488,7 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="img/Ken/Euphoniums-YEP-211_small.jpg">
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+
                                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
@@ -521,8 +502,7 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="img/Ken/Baritone-YBH-301M_small.jpg">
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+
                                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
@@ -536,8 +516,7 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="img/Ken/Tenor-Saxophone_1_small.jpg">
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+
                                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
