add chức năng đăng nhập và trang chủ, sửa giao diện login

--- a/src/main/resources/static/assets/login/css/main.css
+++ b/src/main/resources/static/assets/login/css/main.css
@@ -45,8 +45,8 @@
 
       button {
         border-radius: 20px;
-        border: 1px solid #ff4b2b;
-        background-color: #ff4b2b;
+        border: 1px solid #7fad39;
+        background-color: #7fad39;
         color: #ffffff;
         font-size: 12px;
         font-weight: bold;
@@ -161,9 +161,9 @@
       }
 
       .overlay {
-        background: #ff416c;
-        background: -webkit-linear-gradient(to right, #ff4b2b, #ff416c);
-        background: linear-gradient(to right, #ff4b2b, #ff416c);
+        background: #7fad39;
+        background: -webkit-linear-gradient(to right, #7fad39, #188431);
+        background: linear-gradient(to right, #7fad39, #1c8935);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: 0 0;
@@ -244,7 +244,7 @@
       }
 
       footer i {
-        color: red;
+        color: #28a745;
       }
 
       footer a {
