--- a/src/main/resources/templates/shop-details.html
+++ b/src/main/resources/templates/shop-details.html
@@ -35,17 +35,45 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6">
                     <div class="product__details__pic">
+
                         <div class="product__details__pic__item">
                             <img class="product__details__pic__item--large"
-                                 th:src="@{/img/guitar/cordoba-C1M-CE-01-450x471.jpg}" alt="">
+                                 th:src="@{'/img/guitar/' + ${product.productImage}}" alt="">
                         </div>
+
+
+                        <!--                        Hiển thị hình ảnh lớn&ndash;&gt;-->
+
+
+
+
+<!--                        <div class="product__details__pic__item">-->
+<!--                            <img th:src="${product.productImage}" alt="Product Image">-->
+
+<!--                        </div>-->
+
+<!--                        <div class="product__details__pic__item">-->
+<!--                            <img th:src="@{/img/__${product.category.categoryName.toLowerCase()}__/__${product.productImage}__}" alt="Product Image">-->
+<!--                        </div>-->
+
+
+                        <!--                        <div class="product__details__pic__item">-->
+<!--                            <img th:src="@{'/img/' + ${product.category.categoryName.toLowerCase()} + '/' + ${product.productImage}}" alt="Product Image">-->
+<!--                        </div>-->
+
+
+
+
+
+
+
                         <div class="product__details__pic__slider owl-carousel">
-                            <img data-imgbigurl="img/guitar/cordoba-C1M-CE-04.jpg"
-                                 th:src="@{/img/guitar/cordoba-C1M-CE-04.jpg}" alt="">
-                            <img data-imgbigurl="img/guitar/cordoba-C1M-CE-05.jpg"
-                                 th:src="@{/img/guitar/cordoba-C1M-CE-05.jpg}" alt="">
-                            <img data-imgbigurl="img/guitar/cordoba-C1M-CE-06.jpg"
-                                 th:src="@{/img/guitar/cordoba-C1M-CE-06.jpg}" alt="">
+<!--                            <img data-imgbigurl="img/guitar/cordoba-C1M-CE-04.jpg"-->
+<!--                                 th:src="@{/img/guitar/cordoba-C1M-CE-04.jpg}" alt="">-->
+<!--                            <img data-imgbigurl="img/guitar/cordoba-C1M-CE-05.jpg"-->
+<!--                                 th:src="@{/img/guitar/cordoba-C1M-CE-05.jpg}" alt="">-->
+<!--                            <img data-imgbigurl="img/guitar/cordoba-C1M-CE-06.jpg"-->
+<!--                                 th:src="@{/img/guitar/cordoba-C1M-CE-06.jpg}" alt="">-->
                             <!-- <img data-imgbigurl="img/guitar/cordoba-C1M-CE-01-450x471.jpg"
                                 src="img/guitar/cordoba-C1M-CE-01-450x471.jpg" alt=""> -->
                         </div>
@@ -53,7 +81,9 @@
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <div class="product__details__text">
-                        <h3>CORDOBA C1M-CE</h3>
+<!--                        tên sản phẩm-->
+                        <h3 th:text="${product.productName}"></h3>
+                        <!--<h3>CORDOBA C1M-CE</h3>-->
                         <div class="product__details__rating">
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
@@ -62,8 +92,14 @@
                             <i class="fa fa-star-half-o"></i>
                             <span>(18 reviews)</span>
                         </div>
-                        <div class="product__details__price">1.000.000 VNĐ</div>
-                        <p>Đàn guitar Cordoba C1M-CE là dòng Classical có thiết kế dáng khuyết cùng với âm thanh trầm ấm tốt đúng chuẩn cổ điển, và có màu sắc tươi sáng. </p>
+<!--                        Hiển thị giá sản phẩm-->
+                        <div class="product__details__price" th:text="${product.productPrice + ' VNĐ'}"></div>
+<!--                        <div class="product__details__price">${product.productPrice} VNĐ</div>-->
+<!--                        <div class="product__details__price">1.000.000 VNĐ</div>-->
+
+<!--                        Mô tả sản phẩm-->
+
+                        <p th:text="${product.productDesc}"></p>
                         <div class="product__details__quantity">
                             <div class="quantity">
                                 <div class="pro-qty">
@@ -74,9 +110,9 @@
                         <a href="#" class="primary-btn">THÊM VÀO GIỎ HÀNG</a>
                         <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
                         <ul>
-                            <li><b>Số lượng</b> <span>Còn hàng</span></li>
+                            <li><b>Số lượng</b> <span th:text="${product.quantity}"></span></li>
                             <!-- <li><b>Shipping</b> <span>01 day shipping. <samp>Free pickup today</samp></span></li> -->
-                            <li><b>Nặng</b> <span>0.5 kg</span></li>
+
                             <!-- <li><b>Share on</b>
                                 <div class="share">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
@@ -92,78 +128,31 @@
                     <div class="product__details__tab">
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active" data-toggle="tab" href="#tabs-1" role="tab"
-                                    aria-selected="true">Mô tả</a>
+
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab"
-                                    aria-selected="false">Thông tin</a>
+
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab"
-                                    aria-selected="false">Nhận xét <span>(1)</span></a>
+
                             </li>
                         </ul>
                         <div class="tab-content">
                             <div class="tab-pane active" id="tabs-1" role="tabpanel">
-                                <div class="product__details__tab__desc">
-                                    <h6>Mô tả sản phẩm</h6>
-                                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
-                                        Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Vivamus
-                                        suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam sit amet quam
-                                        vehicula elementum sed sit amet dui. Donec rutrum congue leo eget malesuada.
-                                        Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur arcu erat,
-                                        accumsan id imperdiet et, porttitor at sem. Praesent sapien massa, convallis a
-                                        pellentesque nec, egestas non nisi. Vestibulum ac diam sit amet quam vehicula
-                                        elementum sed sit amet dui. Vestibulum ante ipsum primis in faucibus orci luctus
-                                        et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
-                                        vel, ullamcorper sit amet ligula. Proin eget tortor risus.</p>
-                                        <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Lorem
-                                        ipsum dolor sit amet, consectetur adipiscing elit. Mauris blandit aliquet
-                                        elit, eget tincidunt nibh pulvinar a. Cras ultricies ligula sed magna dictum
-                                        porta. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus
-                                        nibh. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
-                                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Sed
-                                        porttitor lectus nibh. Vestibulum ac diam sit amet quam vehicula elementum
-                                        sed sit amet dui. Proin eget tortor risus.</p>
+<!--                                <div class="product__details__tab__desc">-->
+
+
+
                                 </div>
                             </div>
                             <div class="tab-pane" id="tabs-2" role="tabpanel">
-                                <div class="product__details__tab__desc">
-                                    <h6>Thông tin sản phẩm</h6>
-                                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
-                                        Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus.
-                                        Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam
-                                        sit amet quam vehicula elementum sed sit amet dui. Donec rutrum congue leo
-                                        eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat.
-                                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent
-                                        sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ac
-                                        diam sit amet quam vehicula elementum sed sit amet dui. Vestibulum ante
-                                        ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-                                        Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
-                                        Proin eget tortor risus.</p>
-                                    <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Lorem
-                                        ipsum dolor sit amet, consectetur adipiscing elit. Mauris blandit aliquet
-                                        elit, eget tincidunt nibh pulvinar a. Cras ultricies ligula sed magna dictum
-                                        porta. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus
-                                        nibh. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
-                                </div>
+<!--                                <div class="product__details__tab__desc">-->
+<!--                                </div>-->
                             </div>
                             <div class="tab-pane" id="tabs-3" role="tabpanel">
-                                <div class="product__details__tab__desc">
-                                    <h6>Nhận xét</h6>
-                                    <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
-                                        Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus.
-                                        Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam
-                                        sit amet quam vehicula elementum sed sit amet dui. Donec rutrum congue leo
-                                        eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat.
-                                        Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent
-                                        sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ac
-                                        diam sit amet quam vehicula elementum sed sit amet dui. Vestibulum ante
-                                        ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-                                        Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
-                                        Proin eget tortor risus.</p>
-                                </div>
+<!--                                <div class="product__details__tab__desc">-->
+
+<!--                                </div>-->
                             </div>
                         </div>
                     </div>
